@@ -2,7 +2,9 @@
 
 	* tmda-pending (main): Bugfix.  If running in interactive and
 	cache mode, remove the message from the cache after a `show'.
-	
+
+	(main): Add a (-T, --terse) option.
+
 2002-04-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-pending (main): Don't pass over delivered messages if
